Added Event Registration endpoint
